# decontx-python

./: ReadMe.md  pyproject.toml
decontx/: __init__.py  core.py  fast_ops.py  model.py  simulation.py  utils.py
src/decontx/: __init__.py  clustering.py  core.py  fast_ops.py  model.py  plotting.py  simulation.py  utils.py
tests/: test_core.py  test_notebook.ipynb
