[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decontx-python"
version = "0.1.0"
description = "Python implementation of DecontX for single-cell RNA-seq decontamination"
authors = [{name = "Your Name", email = "your.email@domain.com"}]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0", 
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numba>=0.55.0",
    "umap-learn>=0.5.0",
    "tqdm>=4.60.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]